# rocq-covering-map

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  rocq-covering-map.opam
.github/workflows/: ci.yml
src/: Covering.v  Level0.v  Level1.v  Level2.v
